examples/v0.9/errors/a.nova
import b

export fn hello() {
    print("A")
}